# river

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  river.code-workspace  test.py
cli/: .gitignore  pyproject.toml
cli/river_cli/: __init__.py  animated_label.py  main.py  river_node.py
cli/src/: animated_label.py  composite_label.py  const.py  data.py  main.py  river_node.py
common/: __init__.py  pyproject.toml
common/river_common/: __init__.py  job_status.py  river_status.py  shared.py  status.py  task_status.py
demo/: README.md  __main__.py  pyproject.toml
runner/: pyproject.toml
runner/src/: base_executor.py  debug_executor.py  local_executor.py  remote_executor.py
runner/test/: test_base_executor.py  test_debug_executor.py  test_local_executor.py  test_remote_executor.py
sandbox/: pyproject.toml
sandbox/src/: command_executor.py  docker_sandbox.py
sandbox/test/: test_base_sandbox.py  test_command_executor.py  test_docker_sandbox.py
sdk/: __init__.py  job.py  main.py  pyproject.toml  task.py
sdk/river_sdk/: __init__.py  fingerprint.py  job.py  river.py  task.py
sdk/river_sdk/sandbox/: __init__.py  base_sandbox.py  docker_sandbox.py
sdk/src/: job.py  river.py  task.py
sdk/src/sandbox/: __init__.py  base_sandbox.py  command_executor.py  docker_sandbox.py
sdk/test/: test_fingerprint.py  test_job.py  test_module_for_fingerprint.py  test_river.py  test_task.py
sdk/test/sandbox/: __init__.py  test_base_sandbox.py  test_command_executor.py  test_docker_sandbox.py
test/: test_local_executor.py  test_remote_executor.py
