[project]
name = "river"
version = "0.1.0"
description = "A mono repo for river: includes SDK, controller, and runner."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fabric>=3.2.2",
]

[tool.setuptools.packages.find]
where = ["sdk", "controller", "runner"]

[[tool.uv.index]]
url = "https://mirrors.nju.edu.cn/pypi/web/simple"
default = true

[tool.pytest.ini_options]
testpaths = [
    "test",
    "sdk/test", 
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 
