[project]
name = "river-sdk"
version = "0.1.0"
description = "SDK for river project."
authors = [
    { name = "Yuran Ou", email = "hello@ouyuran.com" }
]
requires-python = ">=3.12"
readme = "./README.md"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 