[project]
name = "river-sdk"
version = "0.1.0"
description = "SDK for river project."
authors = [
    { name = "Yuran Ou", email = "hello@ouyuran.com" }
]
requires-python = ">=3.12"
readme = "./README.md"

dependencies = [
    "fabric==3.2.2",
    "river-common",
    "cloudpickle>=3.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-sugar",
]

[tool.uv.sources]
river-common = { path = "../common", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["river_sdk*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"